syntax = "proto3";

package myapi;

import "complex_types.proto";
import "primitive_types.proto";

service Greeter {
  rpc SayHello(StringValue) returns (StringValue);
  rpc IntAddInt(Int32Value) returns (Int32Value);
  rpc SayGoodbye(Byebye) returns (Byebye);
}
service Byer {
  rpc SayWorld(StringValue) returns (StringValue);
  rpc DecDecimal(tsurugidb.udf.Decimal) returns (tsurugidb.udf.LocalTime);
}
message Bye {
  string value = 1;
  string message = 2;
}
message Byebye {
  Bye bye = 1;
  string str = 2;
}
